# aethermagic

./: .gitignore  LICENSE  LOAD_BALANCING_IMPLEMENTATION.md  MANIFEST.in  MESSAGE_DEDUPLICATION_FIX.md  README.md  README_OLD.md  TASK_DISTRIBUTION.md  TRANSLATION_SUMMARY.md  aether.py  build.sh  demo_shared_subscriptions.py  diagnose_workers.py  final_deduplication_fix.py  load_balanced_demo.py  pyproject.toml  quick_redis_test.py  repeater.py  repeater.service  requirements.txt  simple_task_test.py  test_backward_compatibility.py  test_load_balancing.py  test_protocols.py  test_redis_django.py  test_task_distribution.py
docs/: ARCHITECTURE_UNIFICATION.md  CHANGELOG.md  SHARED_SUBSCRIPTION_FIX.md
examples/: config.json  config.yaml  config_examples.py  examples.py  initialization_demo.py  installation_guide.py  practical_config_guide.py  quick_start.py
src/aethermagic/: __init__.py  aethermagic.py  magic.py  task.py
src/aethermagic/protocols/: __init__.py  mqtt_protocol.py  redis_protocol.py  redis_protocol_backup.py  redis_protocol_simple.py  websocket_protocol.py  zeromq_protocol.py
tests_and_debug/: demo.py  django_aether_utils.py  final_listener_fix.py  fix_tid_matching.py
